Olhos e cores de pele

--- a/Ficha3.html
+++ b/Ficha3.html
@@ -66,8 +66,8 @@
                 d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z" />
         </svg></div>
         <div id="imagem-personagem">
-            <div id="olhos"></div>
-            <img src="imgs-ficha3/H3.png">
+            <img id="olhos" src="imgs-ficha3/olhos/oPreto.png">
+            <img id="humano" src="imgs-ficha3/branco.png">
         </div>
         <div id="flecha-personagem-direita"><svg xmlns="http://www.w3.org/2000/svg" height="32px"
             viewBox="0 -960 960 960" width="32px" fill="#fbf0c4">
@@ -332,21 +332,34 @@
                     <p>SELECIONAR</p>
                 </div>
             </div>
-            <div class="itemGaleria" id="item-pele">
-                <img src="imgs/Kallista.png">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium veritatis sed porro nostrum
-                    hic, velit ullam consectetur molestiae deleniti tempore aspernatur illo fugit accusantium? Ipsam
-                    modi explicabo assumenda nam repellendus!</p>
+            <div class="itemGaleria">
+                <section  id="item-pele">
+                    <div class="cor-pele" id="branco"><p>Branco</p></div>
+                    <div class="cor-pele" id="moreno"><p>Moreno</p></div>
+                    <div class="cor-pele" id="pardo"><p>Pardo</p></div>    
+                    <div class="cor-pele" id="negro"><p>Negro</p></div>
+                </section>
                 <div class="botaoSelecao">
                     <p>SELECIONAR</p>
                 </div>
             </div>
-            <div class="itemGaleria" id="item-olhos">
-                <h2>Cores</h2>
-                <label>
-                    COR DOS OLHOS: 
-                </label>
-                <input id="inputOlhos" type="color">
+            <div class="itemGaleria">
+                <section  id="item-olhos">
+                    <div class="cor-olho" id="oBranco"><p>Branco</p></div>
+                    <div class="cor-olho" id="oAmareloClaro"><p>Bege</p></div>
+                    <div class="cor-olho" id="oAmarelo"><p>Amarelo</p></div>
+                    <div class="cor-olho" id="oLaranja"><p>Laranja</p></div>
+
+                    <div class="cor-olho" id="oRosa"><p>Rosa</p></div>
+                    <div class="cor-olho" id="oVermelho"><p>Vermelho</p></div>
+                    <div class="cor-olho" id="oVinho"><p>Vinho</p></div>
+                    <div class="cor-olho" id="oRoxo"><p>Roxo</p></div>
+
+                    <div class="cor-olho" id="oAzul"><p>Azul</p></div>
+                    <div class="cor-olho" id="oAzulbb"><p>Azul ceu</p></div>
+                    <div class="cor-olho" id="oVerde"><p>Verde</p></div>
+                    <div class="cor-olho" id="oPreto"><p>Preto</p></div>
+                </section>
             </div>
             <div class="itemGaleria" id="item-camisa">
                 <img src="imgs/Kallista.png">
