--- a/Ficha.html
+++ b/Ficha.html
@@ -113,6 +113,13 @@
             criar sua ficha.</p>
 
         <iframe class="video" src="https://www.youtube.com/embed/k1E-PQPOk3c" height="330px" width="590px"></iframe>
+
+        <div class="Barra"></div>
+
+        <section id="monte-personagem">
+            <h1 class="title-center">Monte seu personagem</h1>
+            <a id="botaoPrsonagem" href="Ficha3.html">CLIQUE</a>
+        </section>
     </div>
 
     <a href="#topo-da-pagina" id="voltar-topo"><svg xmlns="http://www.w3.org/2000/svg" height="24px"
