--- a/Ficha.html
+++ b/Ficha.html
@@ -118,7 +118,7 @@
 
         <section id="monte-personagem">
             <h1 class="title-center">Monte seu personagem</h1>
-            <a id="botaoPrsonagem" href="Ficha3.html">CLIQUE</a>
+            <a id="botaoPersonagem" href="Ficha3.html">MONTAGEM</a>
         </section>
     </div>
 
