--- a/Ficha3.html
+++ b/Ficha3.html
@@ -421,7 +421,7 @@
         </section>
 
     </div>
-    <script src="script.js"></script>
+    <script src="scriptFicha.js"></script>
 </body>
 
 </html>
