--- a/Ficha3.html
+++ b/Ficha3.html
@@ -333,15 +333,18 @@
                 </div>
             </div>
             <div class="itemGaleria">
-                <section  id="item-pele">
+                <section class="item-pele">
                     <div class="cor-pele" id="branco"><p>Branco</p></div>
                     <div class="cor-pele" id="moreno"><p>Moreno</p></div>
                     <div class="cor-pele" id="pardo"><p>Pardo</p></div>    
                     <div class="cor-pele" id="negro"><p>Negro</p></div>
                 </section>
-                <div class="botaoSelecao">
-                    <p>SELECIONAR</p>
-                </div>
+                <section class="item-pele">
+                    <div class="cor-pele" id="tieflingAzul"><p>Azul</p></div>
+                    <div class="cor-pele" id="tieflingPreto"><p>Preto</p></div>
+                    <div class="cor-pele" id="tieflingRoxo"><p>Roxo</p></div>    
+                    <div class="cor-pele" id="tieflingVerde"><p>Verde</p></div>
+                </section>
             </div>
             <div class="itemGaleria">
                 <section  id="item-olhos">
@@ -361,18 +364,11 @@
                     <div class="cor-olho" id="oPreto"><p>Preto</p></div>
                 </section>
             </div>
-            <div class="itemGaleria" id="item-camisa">
-                <img src="imgs/Kallista.png">
-                <h2>Camisa</h2>
-            </div>
-            <div class="itemGaleria" id="item-calça">
-                <img src="imgs/Kallista.png">
-                <h2>Calça</h2>
-            </div>
-            <div class="itemGaleria" id="item-cabelo">
-                <img src="imgs/Kallista.png">
-                <h2>Cabelo</h2>
-            </div>
+
+            <div class="itemGaleria" id="item-camisa"></div>
+            <div class="itemGaleria" id="item-calca"></div>
+            <div class="itemGaleria" id="item-cabelo"></div>
+            
             <div class="itemGaleria" id="item-armadura">
                 <img src="imgs/Kallista.png">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium veritatis sed porro nostrum
