--- a/Dnd-Raças.html
+++ b/Dnd-Raças.html
@@ -30,7 +30,7 @@
     <header id="topo-da-pagina">
         <div class="interface">
             <section class="logo">
-                <a href="https://www.youtube.com/watch?v=o-YBDTqX_ZU"><img
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img
                         src="imgs/3714923-middle-removebg-preview.png" alt="LOGO"></a>
             </section>
             <div class="mobile-menu"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
